Replace deprecated new Integer(x) with autoboxing
new Integer(int) has been deprecated since Java 9. All instances
replaced with plain int literals/variables (autoboxed) or
Integer.valueOf() where a String parse was involved.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>